# GUMM

./: GUMM_Testing.ipynb  README.md  pyproject.toml  setup.py
gumm/: __init__.py  _model.c  _model.pyx  _normalize.c  _normalize.pyx  _spatial.pyx
gumm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
