[build-system]
requires      = ["setuptools>=61.0", "wheel", "cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name        = "gumm"
version     = "0.3.0"
description = "Gaussian Uniform Mixture Model with spatial awareness and OpenMP parallelisation"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "cython>=3.0",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["gumm*"]
